# xrtc

./: Cargo.toml  README.md  taplo.toml
core/: Cargo.toml
core/src/: lib.rs  message.rs  transport.rs
protocols/proxy/: Cargo.toml
protocols/proxy/src/: backend.rs  error.rs  lib.rs  message.rs  tunnel.rs
src/: backend.rs  callback.rs  error.rs  lib.rs  main.rs  proxy.rs  service.rs
src/protocols/proxy/: backend.rs  mod.rs  tunnel.rs
src/rtc/: connection.rs  mod.rs
swarm/: Cargo.toml
swarm/src/: lib.rs
transport/: Cargo.toml
transport/src/: callback.rs  connection.rs  error.rs  lib.rs
xrtc/: Cargo.toml
xrtc/src/: lib.rs  logging.rs  main.rs  service.rs
