[workspace]
resolver = "2"
members = ["xrtc", "core", "swarm", "transport", "protocols/proxy"]

[workspace.dependencies]
xrtc-core = { path = "./core", version = "0.1.0" }
xrtc-proxy = { path = "./protocols/proxy", version = "0.1.0" }
xrtc-swarm = { path = "./swarm", version = "0.1.0" }
xrtc-transport = { path = "./transport", version = "0.1.0" }
