[package]
name = "xrtc-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
dashmap = "5.5.0"
serde = "1.0.183"
thiserror = "1.0.47"
tracing = "0.1.37"
webrtc = "0.8.0"
xrtc-core = { workspace = true }
