[package]
name = "xrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
backtrace = "0.3.68"
clap = { version = "4.3.23", features = ["derive"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
xrtc-core = { workspace = true }
xrtc-proxy = { workspace = true }
xrtc-swarm = { workspace = true }
xrtc-transport = { workspace = true }
