[package]
name = "xrtc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
dashmap = "5.5.0"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
xrtc-core = { workspace = true }
xrtc-swarm = { workspace = true }
